--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style convertedIcons.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   provider: ^6.0.5
@@ -57,9 +57,14 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the convertedIcons in
+  # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: InputSearchIcon
+      fonts:
+        - asset: assets/fonts/icons/Input-Search-Icon.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -88,11 +93,5 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-
-  fonts:
-    - family: CustomIcon
-      fonts:
-        - asset: fonts/convertedIcons/Input-search-icon.ttf
-
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
